<resources>
    <string name="app_name">TMDB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_logo">App_Logo</string>
    <string name="home_banner">Home_banner</string>
    <string name="show_indicator">Show_indicator</string>
    <string name="welcome">Welcome.</string>
    <string name="welcome_details">Millions of movies, TV shows and people to discover. Explore now.</string>
    <string name="listMovie">List Movie</string>
    <string name="listTvShow">List TV Show</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="list_of_movies">List of Movies</string>
    <string name="list_of_tv_shows">List of TV Shows</string>
    <string name="results">Results</string>
    <string name="temp_title">Title here…</string>
    <string name="temp_date">12/12/12</string>
    <string name="movie_backdrop">Movie Backdrop</string>
    <string name="button_back">Button Back</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="icon_dot">Icon Dot</string>
    <string name="temp_duration">1h 20m</string>
    <string name="titlebar">titleBar</string>
    <string name="information">Information</string>
    <string name="button_favorite">Button Favorite</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="temp_sinopsis">Sinopsis will show here…</string>
    <string name="season">Season</string>
    <string name="tv_show_backdrop">Tv Show Backdrop</string>
    <string name="tv_show_poster">Tv Show Poster</string>
    <string name="temp_season">Season 1</string>
    <string name="temp_season_top_detail">2017 | 18 Eps.</string>
    <string name="temp_season_detail_overview">Season detail overview here…</string>
    <string name="temp_season_premiere_detail">Season {number} of {Tv Show name} premiered on {Premiere Date}.</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="my_favorites">My Favorites</string>
    <string name="search_image">Search Image</string>
    <string name="search_movie_and_tv_show_here">Search Movie and Tv Show here...</string>
    <string name="poster_image">poster_image</string>
    <string name="temp_overview">overview here...</string>
    <string name="bg_darken">bg_darken</string>
    <string name="my_favorite_movie">My Favorite Movie</string>
    <string name="my_favorite_tv_show">My Favorite Tv Show</string>
    <string name="successAddedToDatabase">Success Added to the Database</string>
    <string name="successRemovedToDatabase">Success Removed to the Database</string>
    <string name="no_data_img">no data img</string>
    <string name="title_activity_tmdb_app">TmdbApp</string>
    <string name="list_of_movie">List of Movie</string>
    <string name="description">description</string>
    <string name="back">Back</string>
    <string name="no_data">No Data</string>
</resources>